<resources>
    <string name="app_name">LightSwimHCI</string>
    <string name="help_title">Instructions</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Light Swim</string>
    <string name="second_fragment_label">Light Swim</string>
    <string name="settings">Settings</string>
    <string name="saveSettings">Save Settings</string>

    <string name="short_description">To start, click Start Session</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="start_session">Start Session</string>
    <string name="calibrate">Calibrate</string>
    <string name="end_session">End Session</string>
    <string name="active_stations">Active Stations</string>
    <string name="text_station_1">station 1</string>
    <string name="station_2">station 2</string>
    <string name="station_4">station 4</string>
    <string name="station_5">station 5</string>
    <string name="station_6">station 6</string>
    <string name="station_3">station 3</string>
    <string name="order_of_stations">Order Of Stations</string>
    <string name="audio_feedback">Audio Feedback</string>
    <string name="about">About</string>
    <string name="arduino_not_detected">Arduino not detected</string>
    <string name="arudino_detected">Arduino is connected successfully!</string>
    <string name="short_instructions">After setting desired settings, <n>\n\t\t\t\t</n>press "Start Session"</string>
</resources>